# personal_website

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agents.md  docker-compose.yml  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tutorial.md
app/: globals.css  layout.js  page.js
app/ai-projects/: page.js
app/ai-projects/[slug]/: page.js
app/ai-projects/prelegal/: layout.jsx  page.jsx
app/ai-projects/prelegal/creator/: page.jsx
app/ai-projects/prelegal/login/: page.jsx
app/ai-projects/prelegal/signup/: page.jsx
app/ai-projects/verity-ehs/: ehs.css  layout.tsx  page.tsx
app/ai-projects/verity-ehs/faq/: page.tsx
app/api/digital-twin/: route.js
app/components/: ai-projects-preview-strip.jsx  digital-twin-chat.jsx  site-header.jsx
app/components/ehs/: auth-guard.tsx  language-provider.tsx  language-toggle.tsx  nav.tsx
app/components/prelegal/: auth-form.jsx  creator-app.jsx
app/lib/: aiProjects.js  digitalTwinContext.js  ehs-api.ts  ehs-i18n.ts  prelegal-api.js  prelegal-pdf.js
backend/: .env.example  pyproject.toml
backend-ehs/: config.py  main.py  pyproject.toml
backend-ehs/ingestion/: embed_and_load.py
backend-ehs/migrations/: 001_init.sql
backend/app/: auth.py  chat.py  config.py  db.py  llm.py  main.py  models.py  sessions.py
backend/app/documents/: __init__.py  ai_addendum.py  cloud_service.py  design_partner.py  dpa.py  employment_offer.py  mnda.py  registry.py  types.py
backend/tests/: test_smoke.py
scripts/: deploy-ec2.sh  entrypoint.sh  run-dev.sh  start.sh  stop.sh  test-agents-md.sh
(+21 files in other folders)
